--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@ paper/aux_files/*
 !paper/aux_files/main.pdf
 
 .DS_Store
+
+# Ignore Jupyter Notebook checkpoints
+**/.ipynb_checkpoints
+
+# Ignore Python cache files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+
+# Ignore virtual environment directories
+venv/
