--- a/code/config.json
+++ b/code/config.json
@@ -2,7 +2,8 @@
   "num_agents": 100,
   "prob_in": 0.6,
   "prob_out": 0.1,
-  "num_groups": 2,
+  "num_groups": 4,
+  "ba_m": 2,
   "message_left_bias": 2.0,
   "message_right_bias": 2.0,
   "prob_truth": 0.8,
@@ -11,11 +12,13 @@
   "ave_reputation": 0.0,
   "variance_reputation": 1.0,
   "bias_strength": 0.3,
-  "reputation_reward_strength": 0.5,
-  "reputation_penalty_strength": 0.5,
+  "high_rep_count": 3,
+  "high_rep_reward": 1.0,
+  "high_rep_penalty": 1.0,
+  "low_rep_reward": 0.5,
+  "low_rep_penalty": 0.5,
   "forwarding_cost": 0.1,
   "num_rounds": 10,
-  "initial_senders": [0],
   "seed": 42
 }
 
