--- a/code/config.json
+++ b/code/config.json
@@ -1,10 +1,10 @@
 {
-  "network_type": "facebook",
-  "network_file": "../data/facebook_combined.txt",
-  "num_agents": 100,
+  "network_type": "BA",
+  "network_file": "",
+  "num_agents": 10,
   "prob_in": 0.6,
   "prob_out": 0.1,
-  "num_groups": 4,
+  "num_groups": 2,
   "ba_m": 2,
   "use_top_degree_influencers": true,
   "message_left_bias": 2.0,
@@ -12,16 +12,16 @@
   "prob_truth": 0.8,
   "agent_left_bias": 2.0,
   "agent_right_bias": 2.0,
-  "ave_reputation": 0.0,
+  "ave_reputation": 0.5,
   "variance_reputation": 1.0,
   "bias_strength": 0.3,
   "high_rep_count": 3,
-  "high_rep_reward": 1.0,
-  "high_rep_penalty": 1.0,
+  "high_rep_reward": 0.9,
+  "high_rep_penalty": 0.3,
   "low_rep_reward": 0.5,
-  "low_rep_penalty": 0.5,
+  "low_rep_penalty": 0.3,
   "forwarding_cost": 0.1,
-  "num_rounds": 10,
+  "num_rounds": 100,
   "seed": 42
 }
 
