--- a/code/config/config_generate_network.json
+++ b/code/config/config_generate_network.json
@@ -1,12 +1,8 @@
 {
-  "network_type": "facebook",
-  "network_file": "../data/facebook_combined.txt",
-  "sampling_method": "community",
-  "num_agents": 100,
-  "num_groups": 5,
-  "use_top_degree_influencers": true,
-  "message_left_bias": 2.0,
-  "message_right_bias": 2.0,
+  "network_pickle_file": "../data/facebook_community_100nodes_seed42.pkl",
+  "agent_distribution": [3, null, 0],
+  "message_left_bias": 0.5,
+  "message_right_bias": 0.5,
   "prob_truth": 0.8,
   "agent_left_bias": 2.0,
   "agent_right_bias": 2.0,
