--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,12 @@ dependencies = [
     "matplotlib>=3.10.7",
     "networkx>=3.6",
     "python-louvain>=0.16",
-    "scipy>=1.16.3",
+    "scipy>=1.16.3"
 ]
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.package-dir]
+"" = "code"
