--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "ffmpeg>=1.4",
     "matplotlib>=3.10.7",
     "networkx>=3.6",
+    "pandas>=2.3.3",
     "python-louvain>=0.16",
-    "scipy>=1.16.3"
+    "scipy>=1.16.3",
+    "seaborn>=0.13.2",
+    "tqdm>=4.67.1",
 ]
 
 [build-system]
